--- a/pages/subpages/common/new-year/index.wxss
+++ b/pages/subpages/common/new-year/index.wxss
@@ -320,14 +320,31 @@
   width: calc((100% - 18rpx)/2);
   font-size: 0;
   background: #fff;
-  border-radius: 32rpx;
+  border-radius: 36rpx;
+  overflow: hidden;
+}
+
+.goods-cover-wrap {
+  position: relative;
+  width: 100%;
+  height: 336rpx;
+  font-size: 0;
+  border-radius: 36rpx;
   overflow: hidden;
 }
 .goods-cover {
   width: 100%;
-  height: 320rpx;
+  height: 100%;
   object-fit: cover;
 }
+.goods-cover-decoration {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .goods-info {
   display: flex;
   flex-direction: column;
