--- a/pages/subpages/common/new-year/index.wxss
+++ b/pages/subpages/common/new-year/index.wxss
@@ -197,18 +197,19 @@
   border-radius: 28rpx;
   overflow: hidden;
 }
+.prize:first-child {
+  margin-left: 18rpx;
+}
 .prize.big {
   width: 240rpx;
 }
 .prize-cover {
   width: 100%;
   height: 140rpx;
-  object-fit: cover;
   border-radius: 22rpx;
-  background: linear-gradient(0, #f7d5ff 0%, #fbeeff 50%, #f7d5ff 100%);
 }
 .prize-name {
-  margin-top: 10rpx;
+  margin-top: 12rpx;
   font-size: 20rpx;
   font-weight: bold;
   color: #420f9d;
