--- a/pages/subpages/common/new-year/index.wxss
+++ b/pages/subpages/common/new-year/index.wxss
@@ -172,20 +172,24 @@
 }
 
 /* 奖品列表 */
-.prize-list {
-  padding-top: 40rpx;
+.prize-viewport {
   margin: 0 auto;
   width: calc(100% - 8rpx);
-  overflow-x: scroll;
+  overflow: hidden;
+  padding-top: 40rpx;
+  box-sizing: border-box;
   border-top-right-radius: 68rpx;
-  -webkit-overflow-scrolling: touch;
-  white-space: nowrap;
 }
-.prize-list::-webkit-scrollbar {
-  display: none;
+.prize-track {
+  display: inline-flex;
+  flex-direction: row;
+  align-items: flex-start;
+  will-change: transform;
+  padding-left: 18rpx;
+  box-sizing: border-box;
+  contain: layout paint;
 }
 .prize {
-  display: inline-block;
   position: relative;
   flex-shrink: 0;
   margin-right: 18rpx;
@@ -196,9 +200,7 @@
   background: #ffffff;
   border-radius: 28rpx;
   overflow: hidden;
-}
-.prize:first-child {
-  margin-left: 18rpx;
+  box-sizing: border-box;
 }
 .prize.big {
   width: 240rpx;
@@ -207,6 +209,7 @@
   width: 100%;
   height: 140rpx;
   border-radius: 22rpx;
+  object-fit: cover;
 }
 .prize-name {
   margin-top: 12rpx;
@@ -214,6 +217,7 @@
   font-weight: bold;
   color: #420f9d;
   text-align: center;
+  line-height: 1.2;
 }
 .prize-name.big {
   color: #ff197d;
@@ -230,6 +234,7 @@
   color: #ffffff;
   background: linear-gradient(90deg, #ff48d0 0%, #fd2b81 100%);
   border-bottom-right-radius: 18rpx;
+  box-sizing: border-box;
 }
 
 /* 抽奖按钮 */
