feat: 团圆家乡年

--- a/pages/subpages/common/new-year/index.wxml
+++ b/pages/subpages/common/new-year/index.wxml
@@ -63,7 +63,7 @@
       <view class="prize-viewport">
         <view
           class="prize-track"
-          style="transform: translateX({{translateX}}px);"
+          style="transform: translateX({{translateX}}px); transition: {{transition}};"
           bindtouchstart="onTouchStart"
           bindtouchmove="onTouchMove"
         >
