--- a/pages/subpages/common/new-year/index.wxss
+++ b/pages/subpages/common/new-year/index.wxss
@@ -185,14 +185,13 @@
   flex-direction: row;
   align-items: flex-start;
   will-change: transform;
-  padding-left: 18rpx;
   box-sizing: border-box;
   contain: layout paint;
 }
 .prize {
   position: relative;
   flex-shrink: 0;
-  margin-right: 18rpx;
+  margin: 0 9rpx;
   padding: 8rpx;
   width: 160rpx;
   height: 200rpx;
