--- a/pages/subpages/common/new-year/index.wxss
+++ b/pages/subpages/common/new-year/index.wxss
@@ -191,7 +191,7 @@
 .prize {
   position: relative;
   flex-shrink: 0;
-  margin: 0 9rpx;
+  margin-right: 18rpx;
   padding: 8rpx;
   width: 160rpx;
   height: 200rpx;
