--- a/pages/subpages/common/new-year/components/task-popup/index.wxml
+++ b/pages/subpages/common/new-year/components/task-popup/index.wxml
@@ -12,7 +12,7 @@
       <view class="task-list">
         <view class="task-invite">
           <view class="task-info">
-            <text class="task-title">邀请好友助力 0/4</text>
+            <text class="task-title">邀请新人助力 0/4</text>
             <view class="task-content">
               <text>邀请成功可得</text>
               <image class="luck-icon" src="https://static.tiddler.cn/mp/new_year/luck_bag.webp" />
