--- a/pages/subpages/common/new-year/index.wxss
+++ b/pages/subpages/common/new-year/index.wxss
@@ -252,7 +252,6 @@
   z-index: 1;
   transform: translateX(-50%);
 }
-
 .draw-btn-bg {
   position: absolute;
   top: 50%;
@@ -266,6 +265,7 @@
   background-size: cover;
   border-radius: 51rpx;
   z-index: -1;
+  pointer-events: none;
 }
 .draw-btn.pressed .draw-btn-bg {
   transform: translate(-50%, -50%) scale(0.94);
