feat: 团圆家乡年

--- a/pages/subpages/common/new-year/components/task-popup/index.wxss
+++ b/pages/subpages/common/new-year/components/task-popup/index.wxss
@@ -103,6 +103,9 @@
   background: linear-gradient(90deg, #996cfe 0%, #441aef 100%);
   border-radius: 32rpx;
 }
+.task-bth.finished {
+  opacity: 0.5;
+}
 
 .task {
   display: flex;
