feat: 团圆家乡年

--- a/pages/subpages/common/new-year/components/luck-popup/index.wxml
+++ b/pages/subpages/common/new-year/components/luck-popup/index.wxml
@@ -1,29 +1,30 @@
+<wxs module="TIME" src="/utils/filters/time.wxs" />
+
 <van-popup show="{{show}}" safe-area-inset-bottom="{{false}}" round position="bottom" bind:close="hide">
   <view class="luck-popup-main">
     <view class="title-wrap">
-      <image class="luck-popup-title" src="https://static.tiddler.cn/mp/new_year/luck_popup_title.webp" mode="widthFix"/>
+      <image class="luck-popup-title" src="https://static.tiddler.cn/mp/new_year/luck_popup_title.webp" mode="widthFix" />
       <view class="luck-total">
-          <image class="luck-bag" src="https://static.tiddler.cn/mp/new_year/luck_bag.webp" />
-          <view>0</view>
-        </view>
+        <image class="luck-bag" src="https://static.tiddler.cn/mp/new_year/luck_bag.webp" />
+        <view>{{luckScore}}</view>
+      </view>
     </view>
 
-    <scroll-view class="luck-list-wrap" scroll-y="true" scroll-with-animation="true">
+    <scroll-view 
+      class="luck-list-wrap"
+      bindscrolltolower="loadMore"
+      scroll-y
+      scroll-with-animation
+    >
       <view class="luck-list">
-        <view class="luck">
+        <view class="luck" wx:for="{{luckList}}" wx:key="index">
           <view class="luck-info">
-            <text class="luck-title">逛家乡好物会场</text>
-            <view class="luck-time">2026.01.24 12:12:12</view>
+            <text class="luck-title">{{item.desc}}</text>
+            <view class="luck-time">{{TIME.transform(item.createdAt, 'YYYY-MM-DD hh:mm:ss')}}</view>
           </view>
-          <view class="luck-score">+20</view>
-        </view>
-  
-        <view class="luck">
-          <view class="luck-info">
-            <text class="luck-title">福气兑换</text>
-            <view class="luck-time">2026.01.24 12:12:12</view>
+          <view class="luck-score {{item.type === 2 ? 'used' : ''}}">
+            {{item.type === 1 ? '+' : '-'}}{{item.score}}
           </view>
-          <view class="luck-score used">-20</view>
         </view>
       </view>
     </scroll-view>
