--- a/pages/subpages/common/new-year/components/luck-popup/index.wxss
+++ b/pages/subpages/common/new-year/components/luck-popup/index.wxss
@@ -43,6 +43,7 @@
   background: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(12rpx);
   -webkit-backdrop-filter: blur(12rpx);
+  box-shadow: 0px 1px 12px 0px rgba(61, 9, 154, 0.1);
   border-radius: 32rpx;
 }
 .luck-info {
