--- a/components/product-list/index.wxss
+++ b/components/product-list/index.wxss
@@ -8,7 +8,7 @@
   padding: 16rpx;
   width: 572rpx;
   border-radius: 32rpx;
-  box-shadow: 0px 1px 12px 0px rgba(0,0,0,0.1);
+  box-shadow: 0px 1px 12px 0px rgba(0, 0, 0, 0.1);
   vertical-align: top;
 }
 .product-item.filled {
