feat: 团圆家乡年

--- a/pages/subpages/common/new-year/components/task-popup/index.wxml
+++ b/pages/subpages/common/new-year/components/task-popup/index.wxml
@@ -43,12 +43,13 @@
             </view>
           </view>
           <view 
-            class="task-bth"
+            class="task-bth {{item.status !== 1 ? 'finished' : ''}}"
             bindtap="finishTask"
+            data-status="{{item.status}}"
             data-scene="{{item.scene}}"
             data-param="{{item.param}}"
           >
-            {{item.btnContent}}
+            {{item.status === 1 ? item.btnContent : '已完成'}}
           </view>
         </view>
       </view>
