--- a/pages/subpages/common/new-year/components/task-popup/index.wxss
+++ b/pages/subpages/common/new-year/components/task-popup/index.wxss
@@ -94,6 +94,7 @@
 }
 
 .task-bth {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -125,4 +126,14 @@
 .task-info {
   flex: 1;
   font-size: 0;
+}
+
+.wx-company-btn {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: red;
+  opacity: 0;
 }
