--- a/components/popup/index.wxss
+++ b/components/popup/index.wxss
@@ -20,7 +20,7 @@
   width: 100vw;
   max-width: 100vh;
   max-height: 100vh;
-  border-radius: 10px 10px 0 0;
+  border-radius: 36rpx 36rpx 0 0;
   transform: translate(-50%, 100%);
   transition: transform .2s ease;
 }
