--- a/pages/tab-bar-pages/mine/components/auth-info-popup/index.wxml
+++ b/pages/tab-bar-pages/mine/components/auth-info-popup/index.wxml
@@ -1,4 +1,4 @@
-<van-popup show="{{show}}" bind:close="hide" safe-area-inset-bottom="{{false}}" round position="bottom">
+<popup bind:hide="hide">
   <view class="user-info-popup">
     <view class="row">
       <image class="logo" src="https://static.tiddler.cn/mp/logo.webp" />
@@ -23,4 +23,4 @@
       <view class="cancel-btn" bindtap="hide">稍后设置</view>
     </view>
   </view>
-</van-popup>
+</popup>
