--- a/pages/subpages/common/new-year/index.wxml
+++ b/pages/subpages/common/new-year/index.wxml
@@ -102,15 +102,14 @@
   <view class="luck-exchange">
     <view class="luck-exchange-title-wrap">
       <image class="luck-exchange-title" src="https://static.tiddler.cn/mp/new_year/exchange_title.webp" mode="widthFix" />
-      <view class="exchange-record">兑换记录</view>
+      <view class="exchange-record" bindtap="showExchangePopup">兑换记录</view>
     </view>
     <view class="goods-list">
       <view 
         class="goods" 
         wx:for="{{goodsList}}" 
         wx:key="index"
-        bindtap="exchange"
-        data-id="{{item.id}}"
+        bindtap="checkGoods"
         data-goods-id="{{item.goodsId}}"
       >
         <view class="goods-cover-wrap">
@@ -129,7 +128,13 @@
               </view>
               <view class="progress-desc">限100件，还剩80件</view>
             </view>
-            <view class="goods-exchange-btn">立即兑换</view>
+            <view 
+              class="goods-exchange-btn" 
+              catchtap="exchangeGoods"
+              data-id="{{item.id}}"
+            >
+              立即兑换
+            </view>
           </view>
         </view>
       </view>
@@ -174,6 +179,15 @@
 <rule-popup 
   show="{{rulePopupVisible}}" 
   bind:hide="hideRulePopup"
+/>
+<address-popup 
+  show="{{addressPopupVisible}}" 
+  bind:confirm="confirmAddressSelect" 
+  bind:hide="hideAddressPopup"
+/>
+<exchange-popup 
+  show="{{exchangePopupVisible}}" 
+  bind:hide="hideExchangePopup"
 />
 <prize-modal 
   wx:if="{{prizeModalVisible}}"
