--- a/pages/subpages/common/new-year/components/exchange-popup/index.wxss
+++ b/pages/subpages/common/new-year/components/exchange-popup/index.wxss
@@ -1,3 +1,11 @@
+.row {
+  display: flex;
+  align-items: center;
+}
+.row.between {
+  justify-content: space-between;
+}
+
 .exchange-popup-main {
   background: linear-gradient(180deg, #eecaff 0%, #fff 50%, #fff 100%);
 }
@@ -19,43 +27,71 @@
   padding-bottom: calc(env(safe-area-inset-bottom));
 }
 .goods {
-  display: flex;
-  align-items: center;
-  padding: 16rpx 0;
+  margin-bottom: 24rpx;
+  padding: 24rpx;
+  background: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(12rpx);
+  -webkit-backdrop-filter: blur(12rpx);
+  box-shadow: 0px 1px 12px 0px rgba(61, 9, 154, 0.1);
+  border-radius: 32rpx;
+  overflow: hidden;
 }
-
-.goods-icon {
-  margin-right: 16rpx;
-  width: 88rpx;
-  height: 88rpx;
-  border-radius: 16rpx;
-}
-
-.goods-info {
-  flex: 1;
-}
-.goods-title {
-  font-size: 28rpx;
+.exchange-time {
   color: #333;
+  font-size: 26rpx;
   font-weight: bold;
 }
-.goods-time {
-  margin-top: 8rpx;
-  font-size: 24rpx;
-  color: #666;
+.goods-status {
+  color: #ff4b53;
+  font-size: 26rpx;
+}
+.goods-main {
   display: flex;
   align-items: center;
+  margin-top: 24rpx;
+}
+.goods-cover {
+  width: 168rpx;
+  height: 168rpx;
+  object-fit: cover;
+  border-radius: 24rpx;
+}
+.goods-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex: 1;
+  margin-left: 24rpx;
+  height: 168rpx;
+}
+.goods-name {
+  font-size: 28rpx;
+  font-weight: bold;
+  color: #333;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
-.goods-bth {
+.goods-luck {
+  margin-top: 12rpx;
+  flex: 1;
+  font-size: 26rpx;
+  font-weight: bolder;
+  color: #9338ff;
+}
+
+
+.shipping-btn {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0 24rpx;
-  height: 64rpx;
+  height: 60rpx;
   font-size: 24rpx;
   color: #fff;
   font-weight: bold;
   background: linear-gradient(90deg, #996cfe 0%, #441aef 100%);
-  border-radius: 32rpx;
+  border-radius: 30rpx;
 }
