--- a/pages/subpages/common/new-year/components/prize-popup/index.wxss
+++ b/pages/subpages/common/new-year/components/prize-popup/index.wxss
@@ -21,17 +21,24 @@
 .prize {
   display: flex;
   align-items: center;
-  padding: 16rpx 0;
+  margin-bottom: 24rpx;
+  padding: 24rpx;
+  background: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(12rpx);
+  -webkit-backdrop-filter: blur(12rpx);
+  box-shadow: 0px 1px 12px 0px rgba(61, 9, 154, 0.1);
+  border-radius: 32rpx;
+  overflow: hidden;
 }
 
 .prize-icon {
-  margin-right: 16rpx;
   width: 88rpx;
   height: 88rpx;
   border-radius: 16rpx;
 }
 
 .prize-info {
+  margin-left: 24rpx;
   flex: 1;
 }
 .prize-title {
