--- a/pages/subpages/common/new-year/index.wxml
+++ b/pages/subpages/common/new-year/index.wxml
@@ -174,6 +174,7 @@
 />
 <prize-popup 
   show="{{prizePopupVisible}}" 
+  bind:receive="receivePrize"
   bind:hide="hidePrizePopup"
 />
 <rule-popup 
@@ -182,6 +183,8 @@
 />
 <address-popup 
   show="{{addressPopupVisible}}" 
+  prizeId="{{prizeId}}"
+  goodsId="{{goodsId}}"
   bind:confirm="confirmAddressSelect" 
   bind:hide="hideAddressPopup"
 />
