--- a/pages/subpages/common/new-year/components/prize-popup/index.wxss
+++ b/pages/subpages/common/new-year/components/prize-popup/index.wxss
@@ -3,6 +3,8 @@
 }
 
 .title-wrap {
+  display: flex;
+  justify-content: space-between;
   padding: 32rpx;
   padding-bottom: 24rpx;
   font-size: 0;
@@ -10,6 +12,19 @@
 .prize-popup-title {
   width: 148rpx;
 }
+
+.refresh-btn {
+  display: flex;
+  align-items: center;
+  font-size: 24rpx;
+  color: #3d099a;
+}
+.refresh-icon {
+  width: 24rpx;
+  height: 24rpx;
+  margin-left: 8rpx;
+}
+
 
 .prize-list-wrap {
   height: 988rpx;
@@ -59,10 +74,10 @@
   align-items: center;
   justify-content: center;
   padding: 0 24rpx;
-  height: 64rpx;
+  height: 60rpx;
   font-size: 24rpx;
   color: #fff;
   font-weight: bold;
   background: linear-gradient(90deg, #996cfe 0%, #441aef 100%);
-  border-radius: 32rpx;
+  border-radius: 30rpx;
 }
