feat: 奖品领取、兑换

--- a/pages/subpages/common/new-year/index.wxml
+++ b/pages/subpages/common/new-year/index.wxml
@@ -200,6 +200,7 @@
 <prize-modal 
   wx:if="{{prizeModalVisible}}"
   info="{{prizeList[curPrizeIdx]}}"
+  bind:receive="receivePrize"
   bind:hide="hidePrizeModal" 
 />
 <poster-modal 
