--- a/pages/subpages/mall/goods/subpages/goods-detail/components/coupon-item/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/components/coupon-item/index.wxml
@@ -18,9 +18,12 @@
         <view class="coupon-info">
           <view class="coupon-name">{{item.name}}</view>
           <view class="coupon-goods-info row">
-            <image class="coupon-goods-image" src="{{item.goodsCover}}" />
-            <view class="coupon-goods-name omit single">{{item.goodsName}}</view>
-            <view>可用</view>
+            <block wx:if="{{item.goodsId}}">
+              <image class="coupon-goods-image" src="{{item.goodsCover}}" />
+              <view class="coupon-goods-name omit single">{{item.goodsName}}</view>
+              <view>可用</view>
+            </block>
+            <view wx:if="{{!item.goodsId}}">全场通用</view>
           </view>
           <view class="coupon-countdown" wx:if="{{countdown}}">仅剩{{TIME.countdown(countdown, 'd天hh时mm分ss秒')}}</view>
         </view>
