--- a/pages/subpages/common/new-year/index.wxml
+++ b/pages/subpages/common/new-year/index.wxml
@@ -47,7 +47,7 @@
         </view>
         <view class="luck-score-value">
           <image class="luck-bag" src="https://static.tiddler.cn/mp/new_year/luck_bag.webp" />
-          <view>{{luckScore}}</view>
+          <view>{{isLogin ? luckScore : 80}}</view>
         </view>
         <view class="activity-time">
           活动时间：2026.01.24-2026.02.24
