--- a/pages/subpages/common/new-year/components/prize-popup/index.wxss
+++ b/pages/subpages/common/new-year/components/prize-popup/index.wxss
@@ -81,3 +81,6 @@
   background: linear-gradient(90deg, #996cfe 0%, #441aef 100%);
   border-radius: 30rpx;
 }
+.prize-bth.used {
+  opacity: 0.6;
+}
