--- a/pages/subpages/common/new-year/components/prize-popup/index.wxml
+++ b/pages/subpages/common/new-year/components/prize-popup/index.wxml
@@ -24,7 +24,7 @@
             <view class="prize-time">{{TIME.transform(item.createdAt, 'YYYY-MM-DD hh:mm:ss')}}</view>
           </view>
           <view 
-            class="prize-bth {{btnStatus !== 1 ? 'used' : ''}}" 
+            class="prize-bth {{!item.btnStatus ? 'used' : ''}}" 
             wx:if="{{item.prizeType === 2 || item.prizeType === 3}}"
             bindtap="use"
             data-prize="{{item}}"
