--- a/pages/subpages/mine/balance/index.wxml
+++ b/pages/subpages/mine/balance/index.wxml
@@ -24,7 +24,7 @@
   <scroll-view class="change-logs" bindscrolltolower="onReachBottom" scroll-y>
     <view class="change-log row" wx:for="{{logList}}" wx:key="index">
       <view class="log-info">
-        <view class="log-title">{{['佣金提现', '消费抵扣', '订单退款'][item.changeType - 1]}}</view>
+        <view class="log-title">{{['消费抵扣', '订单退款', '奖励提现'][item.changeType - 1]}}</view>
         <view class="log-content" wx:if="{{item.referenceId}}">订单号：{{item.referenceId}}</view>
         <view class="log-time">{{TIME.transform(item.createdAt, 'YYYY-MM-DD hh:mm:ss')}}</view>
       </view>
