--- a/pages/subpages/mine/promoter/subpages/account/index.wxml
+++ b/pages/subpages/mine/promoter/subpages/account/index.wxml
@@ -17,7 +17,7 @@
       </view>
       <view class="amount">
         <text style="font-size: 32rpx;">¥</text>
-        <text>{{cashInfo ? NUM.toFixed(cashInfo.selfPurchase + cashInfo.share, 2) : '0.00'}}</text>
+        <text>{{cashInfo ? NUM.toFixed(cashInfo.total, 2) : '0.00'}}</text>
       </view>
     </view>
     <view class="amount-type-wrap row">
